[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/flat-theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/menu-grab-focus.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/infomenu.gd" type="Script" id=3]
[ext_resource path="res://gfx/gui/pause.png" type="Texture" id=4]
[ext_resource path="res://gfx/gui/hud/gradient-2.png" type="Texture" id=5]
[ext_resource path="res://sounds/music/menu/funky.ogg" type="AudioStream" id=6]

[node name="Node2D" type="Node2D"]

[node name="Pause" type="Sprite" parent="."]
position = Vector2( 216, 122 )
texture = ExtResource( 4 )

[node name="Gradient-2" type="Sprite" parent="."]
visible = false
position = Vector2( 220, 122 )
texture = ExtResource( 5 )

[node name="controls" type="RichTextLabel" parent="."]
margin_left = 6.0
margin_top = 38.0
margin_right = 304.0
margin_bottom = 243.0
theme = ExtResource( 1 )
text = " 
 Controls:
 z / j - Jump
 x / k - Attack
 Shift / L- Dash
 Arrows keys / WASD - Move
"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 105.0
margin_top = 206.0
margin_right = 328.0
margin_bottom = 234.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Quit" type="Button" parent="HBoxContainer"]
margin_right = 42.0
margin_bottom = 28.0
text = "Exit"
script = ExtResource( 2 )

[node name="Github" type="Button" parent="HBoxContainer"]
margin_left = 46.0
margin_right = 112.0
margin_bottom = 28.0
text = "Github"

[node name="Soundcloud" type="Button" parent="HBoxContainer"]
margin_left = 116.0
margin_right = 223.0
margin_bottom = 28.0
text = "Soundcloud"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 5.0
margin_top = -13.0
margin_right = 266.0
margin_bottom = 60.0
theme = ExtResource( 1 )
text = " 
 Game developed by FrostC
 Music made by RodirodDude"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -6.19
autoplay = true
bus = "Music"

[connection signal="pressed" from="HBoxContainer/Quit" to="HBoxContainer" method="_on_Quit_pressed"]
[connection signal="pressed" from="HBoxContainer/Github" to="HBoxContainer" method="_on_Github_pressed"]
[connection signal="pressed" from="HBoxContainer/Soundcloud" to="HBoxContainer" method="_on_Soundcloud_pressed"]
